[project]
name = "eafit-slope-stability"
version = "0.1.0"
description = "Teaching tools for the slope stability class at EAFIT University"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "geotoolbox>=0.1.0",
    "ipykernel>=6.17.1",
    "ipympl>=0.10.0",
    "jupyter-book>=2.1.2",
    "matplotlib>=3.10.0",
    "numba>=0.60.0",
    "numpy>=2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pip>=26.0.1",
    "pynewmarkdisp>=0.1.0",
    "pysheds>=0.5",
    "rasterio>=1.5.0",
    "rasterstats>=0.20.0",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tol-colors>=2.2.0",
]
